Move VS stuff to top folder
The Actions job doesn't see it otherwise.

--- a/HelloMsBuild.vcxproj.filters
+++ b/HelloMsBuild.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\hello.c">
+    <ClCompile Include="hello.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
